RESOLVED FIXED29672
fix accessibility webkit-style-check errors
https://bugs.webkit.org/show_bug.cgi?id=29672
Summary fix accessibility webkit-style-check errors
chris fleizach
Reported 2009-09-23 00:30:30 PDT
looks like there's probably quite a few
Attachments
patch (61.11 KB, patch)
2009-11-02 20:51 PST, chris fleizach
levin: review+
chris fleizach
Comment 1 2009-11-02 20:51:11 PST
Created attachment 42358 [details] patch Just fixing webkit-style errors
David Levin
Comment 2 2009-11-02 22:13:42 PST
Comment on attachment 42358 [details] patch I know there are mixed feelings about style clean up, but I think it is nice to have a consistent style in the code, so I'll review it. It would be nice to fix up a few nits before check-in. > Index: WebCore/accessibility/AXObjectCache.h > +struct TextMarkerData { Might as well fix the two spaces before the {. (Make it one space.) > + bool nodeIsAriaType(Node* node, String role); No need for the param name "node" here. > Index: WebCore/accessibility/AccessibilityObject.cpp > for (parent = parentObject(); parent && parent->accessibilityIsIgnored(); parent = parent->parentObject()) > + { } The preferred style would be to have the open { right after the ) of the for statement. I would think the close brace would go on the next line. > Index: WebCore/accessibility/AccessibilityRenderObject.cpp > @@ -296,10 +296,10 @@ bool AccessibilityRenderObject::isSlider > bool AccessibilityRenderObject::isMenuRelated() const > { > AccessibilityRole role = roleValue(); > - return role == MenuRole || > - role == MenuBarRole || > - role == MenuButtonRole || > - role == MenuItemRole; > + return role == MenuRole > + || role == MenuBarRole > + || role == MenuButtonRole > + || role == MenuItemRole; There are two spaces after the return. Also, if you only indent the subsequent lines by 4 spaces, things line up nicely (much like before): return role == MenuRole || role == MenuBarRole || role == MenuButtonRole || role == MenuItemRole;
chris fleizach
Comment 3 2009-11-02 23:01:39 PST
Note You need to log in before you can comment on or make changes to this bug.